fix: entity 수정